update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: The-Strange-Likeness_66779
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66779-h/images/hardcover.jpg
 creator:
   author:
     agent_name: Grove, Harriet Pyne
     gutenberg_agent_id: '37167'
     url: http://www.gutenberg.org/2009/agents/37167
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66779#The-Strange-Likeness
 gutenberg_issued: '2021-11-21'
 identifiers:
   gutenberg: '66779'
